<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostFragment">

    <include
        android:id="@+id/dm_toolbar"
        layout="@layout/toolbar"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPostagem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dm_toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:alpha="0.8"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/addPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/addpostagembutton"
        android:src="@drawable/ic_add_post_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintTop_toTopOf="@+id/navbar"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/bot_o_de_home"
        android:src="@drawable/ic_home_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addPostButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerPostagem"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/bot_o_de_busca"
        android:src="@drawable/ic_find_postagem_48"
        app:layout_constraintBottom_toBottomOf="@+id/addPostButton"
        app:layout_constraintEnd_toStartOf="@+id/perfilButton"
        app:layout_constraintTop_toTopOf="@+id/navbar"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/perfilButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/botao_de_perfil"
        android:src="@drawable/ic_perfil_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerPostagem"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>