<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CriarPostFragment">

        <include
            android:id="@+id/dm_toolbar"
            layout="@layout/toolbar"
            />

        <TextView
            android:id="@+id/temaIndic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/informe_o_tema"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dm_toolbar" />

        <Spinner
            android:id="@+id/selecTemas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:background="@color/ice_30"
            android:entries="@array/temas"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/temaIndic"
            app:layout_constraintTop_toBottomOf="@+id/dm_toolbar" />

        <TextView
            android:id="@+id/tituloPostagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/t_tulo_da_postagem"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temaIndic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tituloCaixa"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"

            app:boxBackgroundColor="@color/ice_30"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeWidth="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloPostagem">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tituloText"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/postagemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/digite_aqui_sua_postagem"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloCaixa" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postCaixa"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postagemText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postText"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/ice_30" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imagemAnexo"
            android:layout_width="47dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/clips_anexo"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toStartOf="@+id/caixaAnexo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postCaixa"
            app:srcCompat="@drawable/clip"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/caixaAnexo"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/ice_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postCaixa">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/texoAnexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/ice_30"
                android:hint="@string/anexo_link_imgur"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/botaoPublicar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.8"
            android:text="@string/button"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caixaAnexo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>